fixed broken styles: light and dark themes

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -6,3 +6,7 @@
     text-align: center;
     padding-top: 10px;
 }
+
+.moved-padding-left {
+    padding-left: 2rem;
+}
